--- a/src/www/css/style.css
+++ b/src/www/css/style.css
@@ -58,20 +58,32 @@ h2 {
   z-index: 1;
   transition: background 200ms, box-shadow 100ms;
 }
+/* header oscuro */
+#header.oscuro {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+#header.oscuro #menu a {
+  color: #CCC;
+}
+#header.oscuro #menu a.activo,
+#header.oscuro #menu a:hover {
+  color: #FFF;
+}
+/* header claro */
+#header.claro {
+  background-color: rgba(255, 255, 255, 0.8);
+}
+#header.claro #menu a {
+  color: #333;
+}
+#header.claro #menu a.activo,
+#header.claro #menu a:hover {
+  color: #000;
+}
 #header #menu a:hover {
   text-decoration: none;
   color: #333;
   transition: all 200ms;
-}
-#header.scroll {
-  background-color: rgba(255, 255, 255, 0.8);
-  box-shadow: 0 0 0.6em -0.2em #000;
-}
-#header.scroll:hover {
-  /*background-color: rgba(255, 255, 255, 0.9);*/
-}
-#header #menu a.activo {
-  text-shadow: 0 0 0.2em rgba(255, 255, 255, 0.4);
 }
 #header #menu a:hover,
 #header #menu a.activo {
@@ -86,7 +98,7 @@ h2 {
 #logo {
   float: left;
   transition: all 100ms;
-  background-color: rgba(255, 255, 255, 0.05);
+  /*background-color: rgba(255, 255, 255, 0.05);*/
 }
 #logo:hover {
   background-color: rgba(255, 255, 255, 0.1);
